infra/kubernetes/k8s-preg/overlays/prod/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pregnant-pills-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pregnant-pills
  template:
    metadata:
      labels:
        app: pregnant-pills
    spec:
      containers:
        - name: pregnant-pills-container
          image: rockpiryt/pregnant-pills:latest
          ports:
            - containerPort: 8080
