infra/kubernetes/k8s-preg/overlays/prod/patch-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pregnant-pills-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pregnant-pills
  template:
    metadata:
      labels:
        app: pregnant-pills
    spec:
      containers:
        - name: pregnant-pills-container
          image: rockpiryt/pregnant-pills:prod

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

          ports:
            - name: http
              containerPort: 8080
