infra/kubernetes/k8s-preg/overlays/prod/patch-deploy-app-memo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preg-memo-app
spec:
  replicas: 3
