infra/kubernetes/k8s-preg/overlays/prod/patch-deploy-app-org.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preg-org-app
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: preg-org-container
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "200m"
              memory: "300Mi"
