infra/kubernetes/k8s-preg/overlays/prod/patch-deploy-app-pills.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preg-pills-app
spec:
  replicas: 2
  template:
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: "true"
      containers:
        - name: preg-pills-container
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "200m"
              memory: "300Mi"
