infra/kubernetes/k8s-preg/overlays/prod/patch-deploy-pills.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: preg-pills-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: preg-pills
  template:
    metadata:
      labels:
        app: preg-pills
    spec:
      containers:
        - name: preg-pills-container
          image: rockpiryt/preg-pills-app:prod

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

          ports:
            - name: http
              containerPort: 8080
