infra/kubernetes/k8s-preg/overlays/prod/app-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pregnant-pills-service
spec:
  selector:
    app: pregnant-pills
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
