infra/kubernetes/k8s-preg/overlays/prod/patch-svc-baby.yaml
apiVersion: v1
kind: Service
metadata:
  name: preg-baby-svc
  labels:
    app: preg-baby
spec:
  type: NodePort
  selector:
    app: preg-baby # przypisanie svc do deploy
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
