infra/kubernetes/k8s-preg/overlays/prod/patch-svc-memo.yaml
apiVersion: v1
kind: Service
metadata:
  name: preg-memo-svc
  labels:
    app: preg-memo
spec:
  type: NodePort
  selector:
    app: preg-memo # przypisanie svc do deploy
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
