infra/kubernetes/k8s-preg/overlays/prod/patch-svc-nutri.yaml
apiVersion: v1
kind: Service
metadata:
  name: preg-nutri-nd-svc-prod
  labels:
    app: preg-nutri
spec:
  type: NodePort
  selector:
    app: preg-nutri # przypisanie svc do deploy
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
