infra/kubernetes/k8s-preg/overlays/prod/patch-svc-org.yaml
apiVersion: v1
kind: Service
metadata:
  name: preg-org-svc
  labels:
    app: preg-org
spec:
  type: NodePort
  selector:
    app: preg-org # przypisanie svc do deploy
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
