infra/kubernetes/k8s-preg/overlays/prod/rds-postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-rds
spec:
  type: ExternalName
  externalName: ${RDS_ENDPOINT}
